final commit. added background to each quote and also fixed coding readabiltiy

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,7 +25,6 @@ body {
 
 .divider-line1 {
     margin-top: 50px;
-    /* margin-bottom: 0px; */
     margin-left: 50px;
     width: 100%;
     height: 3px;
@@ -77,22 +76,8 @@ body {
   
 }
 
-/* .blue-bow {
-    height: 80px;
-    width: 80px;
-    background-color: transparent;
-
-}
-
-.bowww {
-    height: 80px;
-    width: 80px;
-    background-color: transparent;
-} */
-
 .submit-quote {
     
-    /* margin-top: 350px; */
     margin-top: 550px;
     font-weight: 500px;
     font-size: 40px;
@@ -104,8 +89,6 @@ body {
     font-weight: bolder;
     font-size: 30px;
     margin-right: 10px;
-    
-    /* margin-right: 20px; */
 }
 
 .submit-but {
@@ -149,26 +132,30 @@ body {
 
 
 .messages {
-    /* display: flex; */
     font-weight: 600;
     font-size: 30px;
     margin-bottom: 300px;
-    /* border: 10px solid black;  */
+    width: 90%;
+    height: 100%;
 }
 
 .card-cont{
-    border: 2px solid black;
     display: flex;
     justify-content: space-between;
-    width: 90%;
+    width: 80%;
     height: 100%;
-
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: white;
     margin:10px;
+    margin-bottom: 35px;
+    border-radius: 7px;
+    padding-bottom: 10px;
 }
 
 .mess {
     text-align: left;
-    width: 600px;
+    width: 400px;
     margin-left: 0px;
     margin-right: 0px;
     
@@ -178,28 +165,14 @@ body {
     margin-left: 0px;
     margin-right: 0px;
     text-align: left;
-    /* color:red; */
-    width: 300px;
+    width: 100px;
 }
 
 .clock {
     margin-left: 0px;
     text-align: right;
-    color:pink;
     width: 300px;
 }
-
-
-/* .cards {
-    display: flex;
-    margin: 5px;
-
-} */
-/* 
-.card{
-
-    border: 10px solid black;
-} */
 
 
 .bottom {
